--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -13,7 +13,9 @@ jobs:
         with:
           node-version: 16
           cache: "yarn"
-
+      - uses: borales/actions-yarn@v3.0.0
+        with:
+          cmd: global add node-gyp
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: install --ignore-engines
