--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -8,11 +8,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js
-        uses: actions/setup-node@v3
+      - name: Cache node_modules
+        uses: actions/cache@v2
         with:
-          node-version: 16
-          cache: "yarn"
+          path: node_modules
+          key: node_modules-${{ hashFiles('**/yarn.lock') }}
 
       - uses: borales/actions-yarn@v3.0.0
         with:
