--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -11,17 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js
+      - name: Set Node.js 16.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16.x
           cache: "yarn"
 
-      - uses: borales/actions-yarn@v3.0.0
+      - name: Run install
+        uses: borales/actions-yarn@v4
         with:
           cmd: install --ignore-engines
 
-      - uses: borales/actions-yarn@v3.0.0
+      - uses: borales/actions-yarn@v4
         with:
           cmd: build
 
