--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
-    "target": "es2017",
+    "target": "ESNext",
     "module": "esnext",
     // "ignoreDeprecations": "5.0",
     "lib": [      
