--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Set Node.js 16.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-          cache: "yarn"
+          node-version: 'lts/gallium'
+          cache: 'yarn'
 
       - name: Run install
         uses: borales/actions-yarn@v4
@@ -25,8 +25,9 @@ jobs:
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_NIBIRU_CHAIN }}"
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NIBIRU_CHAIN }}'
           projectId: nibiru-chain
           expires: 14d
           target: explorer
+          firebaseToolsVersion: '12.9.1'
