--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,32 +1,51 @@
-name: Build docker image
+name: docker
 
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - 'master-backup'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to GitHub Container Registry
+      - name: Checkout
+        uses: actions/checkout@v2
+#      -
+#        name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
+#      -
+#        name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+      - name: Install
+        run: yarn install
+      - name: Build
+        run: yarn run vue-cli-service build
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Get version
-        id: get_version
-        uses: battila7/get-version-action@v2
-
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            yaoling/wallet
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=sha
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
       - name: Build and push
-        id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
-          platforms: linux/amd64
-          tags: ghcr.io/nibiruchain/explorer:latest,ghcr.io/nibiruchain/explorer:${{ steps.get_version.outputs.version-without-v }}
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
