--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "daisyui": "^3.1.0",
     "dayjs": "^1.11.7",
     "lazy-load-vue3": "^1.3.0",
+    "logrocket": "^8.1.0",
     "long": "^5.2.1",
     "md-editor-v3": "^2.8.1",
     "numeral": "^2.0.6",
